methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:3: error: not found: type Bool
    var surLaTrace:Bool = false ;
                   ^SlugTracking:9: error: not found: value resultat
    return resultat ;
           ^